--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-table": "^8.9.0",
+    "antd": "^5.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
