--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/plots": "^1.2.5",
     "antd": "^5.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
